# shellchat

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cleanup.sh  docker-compose.yaml  prompts.yaml
.github/workflows/: ci.yml  release.yml  rust.yml
src/: lib.rs  main.rs
src/lib/: chatter.rs  client.rs  command.rs  common.rs  defaults.rs  mod.rs  notifier.rs  prompts.rs  providers.rs  server.rs  spinner.rs  tracing.rs
