[package]
name = "shellchat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4" # or the latest version you prefer
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
clap = { version = "4.5.16", features = ["env"]}

[lib]
name = "shellchat_lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
