[package]
name = "shellchat"
version = "1.0.23"
edition = "2021"
authors = ["Eugen Eisler <eoeisler@gmail.com>"]
description = "Transforms natural language into shell commands for execution or explanation."
license = "MIT"
homepage = "https://github.com/eugeis/shellchat"
repository = "https://github.com/eugeis/shellchat"
categories = ["command-line-utilities"]
keywords = ["chatgpt", "llm", "cli", "gpt", "copilot"]
readme = "README.md"

[dependencies]
actix-web = "4" # or the latest version you prefer
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
clap = { version = "4.5.16", features = ["env", "derive"] }
serde_yaml = "0.9"
anyhow = "1.0.86"
async-trait = "0.1.81"
lazy_static = "1.5.0"
fancy-regex = "0.13.0"
log = "0.4.20"
inquire = "0.7.5"
async-recursion = "1.1.1"
tokio = { version = "1.34.0", features = ["rt", "time", "macros", "signal", "rt-multi-thread"] }
crossterm = "0.28.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1.0.63"
futures = "0.3.30"
actix-rt = "2"

[lib]
name = "shc_lib"
path = "src/lib/mod.rs"

[[bin]]
name = "shc-serve"
path = "src/bin/sch-serve.rs"

[[bin]]
name = "shc"
path = "src/bin/sch.rs"
